# camera_base

./: CMakeLists.txt  package.xml
include/camera_base/: camera_ros_base.h
msg/: ImageNumbered.msg
