<?xml version="1.0"?>
    <package format='2'>
    <name>camera_base</name>
    <version>0.0.2</version>
    <description>The camera_base package</description>

    <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>camera_info_manager</depend>
    <depend>diagnostic_updater</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>image_transport</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

</package>
